--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
+    cursor: url(/public/SVG/cursor.svg), default;
+    transition: cursor 2s
 }
 
 h2 {
