--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
-    cursor: url(/public/SVG/cursor.svg), default;
+    cursor: url(/SVG/cursor.svg), default;
     transition: cursor 2s
 }
 
@@ -13,4 +13,8 @@ h3 {
     margin: 0;
     color: #CCCCCC;
     font-weight: 300;
+}
+
+a:hover {
+    cursor: url(/public/SVG/cursor-pointer.svg), pointer;
 }
